--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
       <div class="sidebar">
         <nav>
           <ul>
+            <li><a href="">Home</a></li>
             <li><a href="">About</a></li>
-            <li><a href="">Portofolio</a></li>
-            <li><a href="">Blog</a></li>
             <li><a href="">Contact</a></li>
+            <li><a href="">Services</a></li>
           </ul>
         </nav>
       </div>
